; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/core/extr_sdio_cis.c_sdio_free_func_cis.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/core/extr_sdio_cis.c_sdio_free_func_cis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdio_func = type { %struct.TYPE_2__*, %struct.sdio_func_tuple* }
%struct.TYPE_2__ = type { i32, %struct.sdio_func_tuple* }
%struct.sdio_func_tuple = type { %struct.sdio_func_tuple* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sdio_free_func_cis(%struct.sdio_func* %0) #0 {
  %2 = alloca %struct.sdio_func*, align 8
  %3 = alloca %struct.sdio_func_tuple*, align 8
  %4 = alloca %struct.sdio_func_tuple*, align 8
  store %struct.sdio_func* %0, %struct.sdio_func** %2, align 8
  %5 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %6 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %5, i32 0, i32 1
  %7 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %6, align 8
  store %struct.sdio_func_tuple* %7, %struct.sdio_func_tuple** %3, align 8
  br label %8

8:                                                ; preds = %21, %1
  %9 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %3, align 8
  %10 = icmp ne %struct.sdio_func_tuple* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %3, align 8
  %13 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %14 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %16, align 8
  %18 = icmp ne %struct.sdio_func_tuple* %12, %17
  br label %19

19:                                               ; preds = %11, %8
  %20 = phi i1 [ false, %8 ], [ %18, %11 ]
  br i1 %20, label %21, label %28

21:                                               ; preds = %19
  %22 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %3, align 8
  store %struct.sdio_func_tuple* %22, %struct.sdio_func_tuple** %4, align 8
  %23 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %3, align 8
  %24 = getelementptr inbounds %struct.sdio_func_tuple, %struct.sdio_func_tuple* %23, i32 0, i32 0
  %25 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %24, align 8
  store %struct.sdio_func_tuple* %25, %struct.sdio_func_tuple** %3, align 8
  %26 = load %struct.sdio_func_tuple*, %struct.sdio_func_tuple** %4, align 8
  %27 = call i32 @kfree(%struct.sdio_func_tuple* %26)
  br label %8

28:                                               ; preds = %19
  %29 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %30 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %29, i32 0, i32 1
  store %struct.sdio_func_tuple* null, %struct.sdio_func_tuple** %30, align 8
  %31 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %32 = getelementptr inbounds %struct.sdio_func, %struct.sdio_func* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = call i32 @put_device(i32* %34)
  ret void
}

declare dso_local i32 @kfree(%struct.sdio_func_tuple*) #1

declare dso_local i32 @put_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
